Fix leak in VRServiceImpl

This makes the implicit Strong Binding between the service and clients explicit, and fixes the service leaking when the binding is closed.

No functional changes here.

BUG=651245
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation
#TBR-ing a simple rename to match style.
TBR=brettw@chromium.org

Review-Url: https://codereview.chromium.org/2571323002
Cr-Commit-Position: refs/heads/master@{#439333}

Former-commit-id: 7980a0e0ca7f5a6abda7e57ab28fbf8f845bfbf8