device/vr/vr_service_impl.h
@@ -19,9 +19,10 @@ namespace device {
 
 class VRServiceImpl : public mojom::VRService {
  public:
+  DEVICE_VR_EXPORT VRServiceImpl();
   DEVICE_VR_EXPORT ~VRServiceImpl() override;
 
-  DEVICE_VR_EXPORT static void BindRequest(
+  DEVICE_VR_EXPORT static void Create(
       mojo::InterfaceRequest<mojom::VRService> request);
 
   mojom::VRServiceClient* client() { return client_.get(); }
@@ -41,23 +42,15 @@ class VRServiceImpl : public mojom::VRService {
   friend class VRDisplayImplTest;
   friend class VRServiceImplTest;
 
-  DEVICE_VR_EXPORT VRServiceImpl();
-
-  // Mojo connection handling.
-  DEVICE_VR_EXPORT void Bind(mojo::InterfaceRequest<mojom::VRService> request);
-  void RemoveFromDeviceManager();
   void RemoveDevice(VRDevice* device);
 
   void SetListeningForActivate(bool listening) override;
 
-  using DisplayImplMap = std::map<VRDevice*, std::unique_ptr<VRDisplayImpl>>;
-  DisplayImplMap displays_;
+  std::map<VRDevice*, std::unique_ptr<VRDisplayImpl>> displays_;
 
   mojom::VRServiceClientPtr client_;
 
   bool listening_for_activate_;
-
-  std::unique_ptr<mojo::Binding<mojom::VRService>> binding_;
 
   DISALLOW_COPY_AND_ASSIGN(VRServiceImpl);
 };
